# discordcpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: BoostDep.cmake  Findnlohmann_json.cmake
example/: CMakeLists.txt  cli.cpp
include/: asio_port.hpp  discordcpp.hpp  event.hpp  event_type.hpp  gateway.hpp  op.hpp  payload.hpp  persistent_state.hpp  rest_api.hpp  ssl_error.hpp  ssl_socket_factory.hpp  user.hpp
include/discordcpp/: asio_port.hpp  discord_api.hpp  file_utils.hpp  gateway.hpp  gateway_connection.hpp  persistent_state.hpp  rest_api.hpp  ssl.hpp  ssl_session.hpp  ssl_socket_factory.hpp  user.hpp
src/: client.cpp  dispatch_payload.cpp  dispatch_payload.hpp  file_utils.cpp  gateway.cpp  gateway_connection.cpp  payload.cpp  payload.hpp  persistent_state.cpp  rest_api.cpp  rest_api.hpp  ssl_session.cpp  ssl_socket_factory.cpp  user.cpp
test/: CMakeLists.txt  unit-dispatch_payload.cpp  unit-gateway.cpp  unit-payload.cpp  unit-rest_api.cpp  unit-user.cpp  unit_persistent-state.cpp  unit_test.cpp
